# laminarization-transition-study

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: jensen1989_fig11_raw.csv  jensen1989_fig8_raw.csv  jensen1989_fw.csv
paper/: build.sh  main-aip.tex  main.tex  make_arxiv.sh  references.bib
paper/figures/: generate_figures.py  phase4_table.csv
paper/sections/: background.tex  introduction.tex  model.tex  numerics.tex  results.tex  scaling.tex
results/exponential-n256/: Re1000_S0.005_L0.01.json  Re1000_S0.005_L0.05.json  Re1000_S0.005_L0.1.json  Re1000_S0.005_L0.25.json  Re1000_S0.005_L0.5.json  Re1000_S0.005_L1.0.json  Re1000_S0.005_L2.0.json  Re1000_S0.005_L5.0.json  Re1000_S0.01_L0.0.json  Re1000_S0.01_L0.01.json  Re1000_S0.01_L0.05.json  Re1000_S0.01_L0.1.json  Re1000_S0.01_L0.25.json  Re1000_S0.01_L0.5.json  Re1000_S0.01_L1.0.json  Re1000_S0.01_L2.0.json  (+238 more)
scripts/: reprocess_viscosity_ratio.py  run_archive_replacements.py  run_exponential_n256.py  run_extended_cycles.py  run_n512_production.py  run_phase1_n256.py  run_phase3_n256.py  run_phase4_revised.py  run_reentrant_expansion.py  run_targeted_s001.py  sync_clean.sh  validate_numba_regression.py
tests/: __init__.py  test_benchmark.py  test_closures.py  test_diagnostics.py  test_grid.py  test_imex.py  test_integration.py  test_io.py  test_operators.py  test_oscillatory_bl.py  test_smoke.py  test_sweep.py  test_sweep_progress.py  test_sweep_utils.py  test_tridiagonal.py  test_validation_diffusion.py  test_validation_inputs.py  test_validation_stokes.py  test_validation_turbulent.py
(+879 files in other folders)
