[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidflow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.4",
    "scipy>=1.10",
    "tqdm>=4.60",
    "numba>=0.58,<0.61",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
fluidflow-sweep = "fluidflow.cli:main"

[dependency-groups]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
